--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </section>
   </div>
 
+  <script src="js/locations_name.js"></script>
   <script src="js/location.js"></script>
   <script src="js/gameboard.js"></script>
 
