Pick random location, scramble word, create element, generate location on board, game loop, game settings

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
+  <script src="js/location_database.js"></script>
+  <script src="js/location.js"></script>
+  <script src="js/gameboard.js"></script>
+  <script src="js/main.js"></script>
+
   <link href="css/custom.css" rel="stylesheet">
 </head>
 
@@ -26,10 +31,5 @@
       </div>
     </section>
   </div>
-
-  <script src="js/locations_name.js"></script>
-  <script src="js/location.js"></script>
-  <script src="js/gameboard.js"></script>
-
 </body>
 </html>
