Added collision settings

--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
         <div id="instructions" class="col-md-12">
           <h1>Travel Scramble</h1>
           <p>How to Play:</p>
-          <p>Type in the names of each city before they fall to the bottom. Harder places will have extra points or unlock the time freeze. Try to get as many before your time is up. If you miss 3 names, it is game over. There are 3 levels in total, and with each one the speed and potential for bonus points increases. Good luck!</p>
+          <p>Type in the names of each city before they fall to the bottom. Try to get as many before your time is up. If you miss 3 names, it is game over.</p>
+          <p> There are 3 levels in total, and with each one the speed and potential for bonus points increases. Good luck!</p>
         </div>
 
         <div id="gameboard"></div>
 
         <div id="start-game-button-wrapper">
-          <button id="startbutton"> Start Game </button>
+          <button id="startgame"> Start Game </button>
         </div>
       </div>
     </section>
