Added losing, winning conditions, timer and score tracking function

--- a/index.html
+++ b/index.html
@@ -19,15 +19,18 @@
     <section class='main_section'>
         <div id="instructions" class="col-md-12">
           <h1>Travel Scramble</h1>
-          <p>How to Play:</p>
+          <h2>How to Play:</h2>
           <p>Type in the names of each city before they fall to the bottom. Try to get as many before your time is up. If you miss 3 names, it is game over.</p>
           <p> There are 3 levels in total, and with each one the speed and potential for bonus points increases. Good luck!</p>
+        <button id="startgame"> Start Game </button>
+
         </div>
 
+        <div id="timer"></div>
         <div id="gameboard"></div>
+        <div><input type="text" name="mytext[]" id="inputForm" align="middle"> Input City Name Here! </div>
 
         <div id="start-game-button-wrapper">
-          <button id="startgame"> Start Game </button>
         </div>
       </div>
     </section>
