Created start menu and adjusted timer / input field

--- a/index.html
+++ b/index.html
@@ -15,29 +15,36 @@
 </head>
 
 <body>
-  <div class='container'>
-    <section class='main_section'>
-        <div id="instructions" class="col-md-12">
+<!-- Top Bar -->
+    <div id="topbar"> Travel Scramble </div>
 
-          <h1>Travel Scramble</h1>
-          <h2>How to Play:</h2>
-          <p>Type in the names of each city before they fall to the bottom. Try to get as many before your time is up. If you miss 3 names, it is game over.</p>
-          <p> There are 3 levels in total, and with each one the speed and potential for bonus points increases. Good luck!</p>
+<!-- Start menu Section -->
+    <section id='menu'>
 
-          <button id="startgame"> Start Game </button>
+    <h2> How to Play </h2>
+      <p> Unscramble the names of the capital cities that appear before they hit the bottom. You have 60 seconds on the clock. </p>
+      <p> If you miss three cities, it is game over. </p>
+      <p> Good luck :)</p>
+      <button id="startgame"> I'm Ready! </button>
 
-        </div>
+    </section>
 
-        <div id="timer"></div>
-        <div id="gameboard"></div>
-
-        <label for="inputForm">Enter capital city name here:</label>
-        <input type="text" id="inputForm"></div>
-
-        <div id="start-game-button-wrapper"> </div>
+<!-- Gameboard Section -->
+      <div id="gameboard">
 
       </div>
-    </section>
-  </div>
+
+<!-- Timer -->
+      <div id="timer"></div>
+
+<!-- Input Field -->
+     <label for="inputForm" id="label">Enter capital city name here:</label>
+     <input type="text" id="inputForm">
+
+
+
+
+<!-- End of Gameboard Section -->
+
 </body>
 </html>
