Reset game, adjusted background and created timer div

--- a/index.html
+++ b/index.html
@@ -18,33 +18,29 @@
 <!-- Top Bar -->
     <div id="topbar"> Travel Scramble </div>
 
-<!-- Start menu Section -->
+    <!-- Start menu Section -->
     <section id='menu'>
-
-    <h2> How to Play </h2>
+      <h2> How to Play </h2>
       <p> Unscramble the names of the capital cities that appear before they hit the bottom. You have 60 seconds on the clock. </p>
       <p> If you miss three cities, it is game over. </p>
       <p> Good luck :)</p>
       <button id="startgame"> I'm Ready! </button>
-
     </section>
 
-<!-- Gameboard Section -->
+    <!-- Game Section -->
+    <section id="game">
+      <!-- Gameboard Section -->
       <div id="gameboard">
-
+        <!-- Timer -->
+        <div id="timer"></div>
+        <!-- Life Counter -->
+        <div id="lifeCounter"></div>
       </div>
 
-<!-- Timer -->
-      <div id="timer"></div>
 
-<!-- Input Field -->
-     <label for="inputForm" id="label">Enter capital city name here:</label>
-     <input type="text" id="inputForm">
-
-
-
-
-<!-- End of Gameboard Section -->
-
+      <!-- Input Field -->
+      <label for="inputForm" id="label">Enter capital city name here:</label>
+      <input type="text" id="inputForm">
+    </section>
 </body>
 </html>
