Added second level

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Start menu Section -->
     <section id='menu'>
       <h2> How to Play </h2>
-      <p> Unscramble the names of the capital cities that appear before they hit the bottom. You have 60 seconds on the clock. </p>
+      <p> Unscramble the names of the world locations that appear before they hit the bottom. Each level has a different theme and each time you have 60 seconds on the clock. </p>
       <p> If you miss three cities, it is game over. </p>
       <p> Good luck :)</p>
       <button id="startgame"> I'm Ready! </button>
