Adjusted CSS, cleared form for each level

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="js/location.js"></script>
   <script src="js/gameboard.js"></script>
   <script src="js/main.js"></script>
-
+  <link href="https://fonts.googleapis.com/css?family=Chewy|Gudea|Josefin+Sans" rel="stylesheet">
   <link href="css/custom.css" rel="stylesheet">
 </head>
 
@@ -22,9 +22,9 @@
     <section id='menu'>
       <h2> How to Play </h2>
       <p> Unscramble the names of the world locations that appear before they hit the bottom. Each level has a different theme and each time you have 60 seconds on the clock. </p>
-      <p> If you miss three cities, it is game over. </p>
+      <p> If you miss three cities - it's game over! </p>
       <p> Good luck :)</p>
-      <button id="startgame"> I'm Ready! </button>
+      <button id="startgame"> Bring it on! </button>
     </section>
 
     <!-- Game Section -->
@@ -39,7 +39,7 @@
 
 
       <!-- Input Field -->
-      <label for="inputForm" id="label">Enter capital city name here:</label>
+      <label for="inputForm" id="label">Enter Name Here:</label>
       <input type="text" id="inputForm">
     </section>
 </body>
