--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
   <script src="js/main.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Chewy|Gudea|Josefin+Sans" rel="stylesheet">
   <link href="css/custom.css" rel="stylesheet">
+<!--
+  <audio controls>
+  <source src="horse.ogg" type="audio/ogg">
+  <source src="horse.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio> -->
+
 </head>
 
 <body>
@@ -35,6 +42,8 @@
         <div id="timer"></div>
         <!-- Life Counter -->
         <div id="lifeCounter"></div>
+        <!-- Score Tracker -->
+        <div id="scoreTracker"></div>
       </div>
 
 
