12pm version, pre-audio

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@ Your browser does not support the audio element.
     <!-- Start menu Section -->
     <section id='menu'>
       <h2> How to Play </h2>
-      <p> Unscramble the names of the world locations that appear before they hit the bottom. Each level has a different theme and each time you have 60 seconds on the clock. </p>
-      <p> If you miss three cities - it's game over! </p>
+      <p> Unscramble the names of the world locations that appear before they hit the bottom.</p>
+      <p> You have 3 lives to get through 3  levels. Each level has a different theme and each time you have 60 seconds on the clock.</p>
+      <p> The first one is Capital Cities. </p>
       <p> Good luck :)</p>
-      <button id="startgame"> Bring it on! </button>
+      <button id="startgame"> BRING IT ON! </button>
     </section>
 
     <!-- Game Section -->
@@ -39,11 +40,13 @@ Your browser does not support the audio element.
       <!-- Gameboard Section -->
       <div id="gameboard">
         <!-- Timer -->
-        <div id="timer"></div>
-        <!-- Life Counter -->
-        <div id="lifeCounter"></div>
-        <!-- Score Tracker -->
-        <div id="scoreTracker"></div>
+        <div id="counters">
+          <div id="timer"></div>
+          <!-- Life Counter -->
+          <div id="lifeCounter"></div>
+          <!-- Score Tracker -->
+          <div id="scoreTracker"></div>
+        </div>
       </div>
 
 
