--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
+  <script src="js/audio.js"></script>
   <script src="js/location_database.js"></script>
   <script src="js/location.js"></script>
   <script src="js/gameboard.js"></script>
   <script src="js/main.js"></script>
+
   <link href="https://fonts.googleapis.com/css?family=Chewy|Gudea|Josefin+Sans" rel="stylesheet">
   <link href="css/custom.css" rel="stylesheet">
 <!--
