center aligned input box

--- a/index.html
+++ b/index.html
@@ -53,8 +53,11 @@ Your browser does not support the audio element.
 
 
       <!-- Input Field -->
-      <label for="inputForm" id="label">Enter Name Here:</label>
-      <input type="text" id="inputForm">
+      <div id="inputdiv">
+        <label for="inputForm" id="label">Enter Name Here:</label>
+        <input type="text" id="inputForm">
+      </div>
     </section>
+
 </body>
 </html>
